[package]
name = "wyrand"
version = "0.1.4"
edition = "2021"
authors = ["Gonçalo Rica Pais da Silva <bluefinger@gmail.com>"]
description = "A fast & portable non-cryptographic pseudorandom number generator and hashing algorithm"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Bluefinger/wyrand-rs"
keywords = ["fast", "random", "wyrand", "hash", "wyhash"]
categories = ["algorithms", "no-std"]
exclude = ["/.*"]
include = ["src/", "LICENSE-*", "README.md"]
autobenches = true
resolver = "2"
rust-version = "1.60.0"

[features]
debug = []
default = ["rand_core", "debug"]
hash = []
rand_core = ["dep:rand_core"]
serde1 = ["dep:serde"]
wyhash = []
randomised_wyhash = ["wyhash", "dep:getrandom"]
v4_2 = []

[dependencies]
getrandom = { version = "0.2", optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
serde_test = "1.0"

[[bench]]
name = "rand_bench"
path = "benches/rand_bench.rs"
harness = false

[package.metadata.docs.rs]
all-features = true
